[gd_scene load_steps=4 format=3 uid="uid://dg8wouh2bvju8"]

[ext_resource type="Script" path="res://Scenes/spaceship.gd" id="1_il7id"]
[ext_resource type="Texture2D" uid="uid://2qor4oid4mn7" path="res://Art/128x128_white_circle.png" id="2_sxt77"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a8cq"]
size = Vector2(100, 100)

[node name="Spaceship" type="RigidBody2D"]
mass = 10.0
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_il7id")

[node name="Sprites" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_5a8cq")

[node name="ShipBody" type="Node2D" parent="."]

[node name="Body" type="Polygon2D" parent="ShipBody"]
position = Vector2(23, 0)
scale = Vector2(0.825806, 1)
polygon = PackedVector2Array(67, 0, -88, -50, -58, 0, -88, 50)

[node name="AfterburnerSprite" type="Sprite2D" parent="ShipBody"]
self_modulate = Color(1, 0, 0, 0.615686)
position = Vector2(-108.75, -4.76837e-07)
scale = Vector2(0.280864, 0.102881)
texture = ExtResource("2_sxt77")

[node name="FlameSprite" type="Sprite2D" parent="ShipBody"]
self_modulate = Color(1, 1, 0, 1)
position = Vector2(-88, 0)
scale = Vector2(0.195473, 0.0823045)
texture = ExtResource("2_sxt77")

[node name="FlameParticles" type="CPUParticles2D" parent="ShipBody"]
position = Vector2(-112, 0)
amount = 20
gravity = Vector2(0, 0)
scale_amount_min = 10.0
scale_amount_max = 10.0

[node name="AimCone" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0.196078)
polygon = PackedVector2Array(0, 0, 100, 10, 100, -10)

[node name="AttackFullCone" type="Polygon2D" parent="."]
visible = false
color = Color(1, 1, 1, 0.196078)
polygon = PackedVector2Array(0, 0, 100, 10, 100, -10)

[node name="AttackCone" type="Polygon2D" parent="AttackFullCone"]
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 100, 5, 100, -4)
